--- a/src/components/Calculator.css
+++ b/src/components/Calculator.css
@@ -1,10 +1,36 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+
+* {
+  font-family: "Inter", sans-serif;
+}
+
+.output {
+  padding: .6em;
+  height: 7em;
+  display: flex;
+  align-items: center;
+}
+
+.firstNum {
+  font-weight: 200;
+  height: 100%;
+  width: 100%;
+  justify-content: right;
+  display: flex;
+  align-items: end;
+  color: white;
+}
+
 button {
   width: 3em;
   height: 3em;
   font-size: 1.5em;
+  font-weight: 500;
   border: none;
   border-radius: 2em;
   margin: 0.3em;
+  color: white;
+  background-color: #505050;
 }
 
 button:hover {
@@ -12,16 +38,23 @@ button:hover {
 }
 
 #butaoZero {
-  width: 6.5em;
+  width: 6.55em;
+  text-align: left;
+  padding-left: 1.2em;
 }
 
 .wrapper {
+  width: 346px;
   border-radius: 2em;
-  width: 350px;
-  padding: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: left;
-  flex-wrap: wrap;
+  padding: 1em;
   background-color: black;
+}
+
+.gray {
+  background-color: #d4d4d2;
+  color: black;
+}
+
+.orange {
+  background-color: #ff9500;
 }
