--- a/src/components/Calculator.css
+++ b/src/components/Calculator.css
@@ -4,8 +4,16 @@
   font-family: "Inter", sans-serif;
 }
 
+.buttons {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .output {
   padding: .6em;
+  width: 100%;
   height: 7em;
   display: flex;
   align-items: center;
@@ -13,6 +21,7 @@
 
 .firstNum {
   font-weight: 200;
+  margin: .3em;
   height: 100%;
   width: 100%;
   justify-content: right;
@@ -44,9 +53,12 @@ button:hover {
 }
 
 .wrapper {
-  width: 346px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   border-radius: 2em;
   padding: 1em;
+  padding-bottom: 1.8em;
   background-color: black;
 }
 
